navbar in progress

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="Site portfólio do Willian, com um perfil de programação voltado para o desenvolvimento web.">
     <meta name="keywords" content="programação, programação web, desenvolvimento web, portfolio, site">
+    <!-- <link rel="canonical" href="link da pag"> -->
     <title>williancapitolio - Portfólio</title>
     <link rel="apple-touch-icon" sizes="180x180" href="../static/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/img/favicon-32x32.png">
@@ -26,7 +27,46 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <nav class="navbar fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#secInicio">
+                    <img src="../static/img/portfolio-logo.png" alt="Logo williancapitolio" width="30" height="24"
+                        class="d-inline-block align-text-top">
+                    williancapitolio
+                </a>
+                <i class="bi bi-list hamburgerMenu"></i>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#secInicio" class="nav-link">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#secSobre" class="nav-link">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#secPortfolio" class="nav-link">Portfólio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#secCurriculo" class="nav-link">Currículo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#secContato" class="nav-link">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="secInicio" id="secInicio"></section>
+        <section class="secSobre" id="secSobre"></section>
+        <section class="secPortfolio" id="secPortfolio"></section>
+        <section class="secCurriculo" id="secCurriculo"></section>
+        <section class="secContato" id="secContato"></section></main>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus excepturi omnis necessitatibus doloremque accusantium aperiam veniam dignissimos, voluptatum quod at architecto neque nulla ea, voluptates ex temporibus. Ut, tenetur esse!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nobis atque et, sint beatae iure iusto voluptates libero debitis cumque perspiciatis aspernatur hic, aliquam eius commodi deleniti pariatur facere error!Lorem
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cumque dignissimos consequatur repudiandae saepe minima unde porro, laudantium magnam dolores, amet atque corrupti quam at sit quaerat, labore incidunt vitae!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ut error deleniti eos vitae incidunt pariatur, a nostrum, nesciunt, dicta nemo eius id. Doloribus expedita perspiciatis minima dolores natus non.
+    <footer class="footer"></footer>
 </body>
 
 </html>
