--- a/templates/index.html
+++ b/templates/index.html
@@ -36,21 +36,21 @@
                     williancapitolio
                 </a>
                 <i class="bi bi-list hamburgerMenu"></i>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="#secInicio" class="nav-link">Início</a>
+                <ul class="navbar-nav navMenu">
+                    <li class="nav-item navItem">
+                        <a href="#secInicio" class="nav-link navLink">Início</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#secSobre" class="nav-link">Sobre</a>
+                    <li class="nav-item navItem">
+                        <a href="#secSobre" class="nav-link navLink">Sobre</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#secPortfolio" class="nav-link">Portfólio</a>
+                    <li class="nav-item navItem">
+                        <a href="#secPortfolio" class="nav-link navLink">Portfólio</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#secCurriculo" class="nav-link">Currículo</a>
+                    <li class="nav-item navItem">
+                        <a href="#secCurriculo" class="nav-link navLink">Currículo</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#secContato" class="nav-link">Contato</a>
+                    <li class="nav-item navItem">
+                        <a href="#secContato" class="nav-link navLink">Contato</a>
                     </li>
                 </ul>
             </div>
