--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
         <nav class="navbar fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#secInicio">
-                    <img src="../static/img/portfolio-logo.png" alt="Logo williancapitolio" width="30" height="24"
-                        class="d-inline-block align-text-top">
+                    <img src="../static/img/portfolio-logo.png" alt="Logo williancapitolio" width="32" height="32"
+                        class="d-inline-block align-text-center">
                     williancapitolio
                 </a>
                 <i class="bi bi-list hamburgerMenu"></i>
