initial settings on secs

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,16 +57,22 @@
         </nav>
     </header>
     <main>
-        <section class="secInicio" id="secInicio"></section>
-        <section class="secSobre" id="secSobre"></section>
-        <section class="secPortfolio" id="secPortfolio"></section>
-        <section class="secCurriculo" id="secCurriculo"></section>
-        <section class="secContato" id="secContato"></section></main>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus excepturi omnis necessitatibus doloremque accusantium aperiam veniam dignissimos, voluptatum quod at architecto neque nulla ea, voluptates ex temporibus. Ut, tenetur esse!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nobis atque et, sint beatae iure iusto voluptates libero debitis cumque perspiciatis aspernatur hic, aliquam eius commodi deleniti pariatur facere error!Lorem
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cumque dignissimos consequatur repudiandae saepe minima unde porro, laudantium magnam dolores, amet atque corrupti quam at sit quaerat, labore incidunt vitae!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ut error deleniti eos vitae incidunt pariatur, a nostrum, nesciunt, dicta nemo eius id. Doloribus expedita perspiciatis minima dolores natus non.
-    <footer class="footer"></footer>
+        <section class="secInicio" id="secInicio">
+            <div class="col-12">
+                <h1>Willian Silva</h1>
+                <h2>de Capitólio, MG, Brasil <i class="bi bi-globe"></i>
+                </h2>
+            </div>
+            <div class="col-12">
+                <a href="#secSobre"><i class="bi bi-arrow-down"></i>Arraste para mais</a>
+            </div>
+        </section>
+        <section class="secSobre container" id="secSobre"><h3>Sobre</h3></section>
+        <section class="secPortfolio container" id="secPortfolio"><h3>Portfólio</h3></section>
+        <section class="secCurriculo container" id="secCurriculo"><h3>Curriculo</h3></section>
+        <section class="secContato container" id="secContato"><h3>Contato</h3></section>
+    </main>
+    <footer class="footer">williancapitolio</footer>
 </body>
 
 </html>
