--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,8 @@
     --colorDarkTwo: #1B1B1B;
     --colorDarkThree: #212529;
 
+    --colorBg: #242424;
+
     --fontDefault: 'Ubuntu', Verdana, Arial;
 
     --fontColorOne: rgba(255, 255, 255, 0.96);
@@ -16,10 +18,11 @@
 
 * {
     font-family: var(--fontDefault);
+    color: var(--fontColorOne);
 }
 
 body {
-    background-color: var(--colorDarkThree);
+    background-color: var(--colorBg);
 }
 
 .header .navbar a {
@@ -88,4 +91,80 @@ body {
     background-position: center;
     width: 100%;
     height: 100vh;
+}
+
+.secInicio div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    justify-content: end;
+    margin: 0;
+    padding: 0;
+    text-shadow: 4px 4px 10px var(--colorDarkOne);
+}
+
+.secInicio div h1 {
+    font-size: 5em;
+}
+
+.secInicio div h2 {
+    font-size: 3em;
+}
+
+.secInicio div:nth-child(2) {
+    text-align: right;
+    justify-content: end;
+}
+
+.secInicio div:nth-child(2) a {
+    margin: auto;
+    margin-right: 2em;
+    margin-bottom: 0;
+    text-decoration: none;
+    color: var(--fontColorOne);
+}
+
+.secInicio div:nth-child(2) i {
+    font-size: 2em;
+}
+
+@media (max-width: 768px) {
+    .secInicio div h1 {
+        font-size: 2.5em;
+    }
+    
+    .secInicio div h2 {
+        font-size: 1.5em;
+    }
+}
+
+h3 {
+    font-size: 1.25em;
+    text-decoration: underline;
+
+}
+
+.secSobre {
+    margin-top: 2em;
+}
+
+.secPortfolio {
+    margin-top: 4em;
+}
+
+.secCurriculo {
+    margin-top: 4em;
+}
+
+.secContato {
+    margin-top: 4em;
+    margin-bottom: 2em;
+}
+
+.footer {
+    background-color: var(--colorDarkThree);
+    text-align: center;
+    justify-content: center;
 }
