--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
                         <a href="#secSobre" class="nav-link navLink">Sobre</a>
                     </li>
                     <li class="nav-item navItem">
-                        <a href="#secPortfolio" class="nav-link navLink">Portfólio</a>
+                        <a href="#secCurriculo" class="nav-link navLink">Currículo</a>
                     </li>
                     <li class="nav-item navItem">
-                        <a href="#secCurriculo" class="nav-link navLink">Currículo</a>
+                        <a href="#secPortfolio" class="nav-link navLink">Portfólio</a>
                     </li>
                     <li class="nav-item navItem">
                         <a href="#secContato" class="nav-link navLink">Contato</a>
@@ -67,10 +67,65 @@
                 <a href="#secSobre"><i class="bi bi-arrow-down"></i>Arraste para mais</a>
             </div>
         </section>
-        <section class="secSobre container" id="secSobre"><h3>Sobre</h3></section>
-        <section class="secPortfolio container" id="secPortfolio"><h3>Portfólio</h3></section>
-        <section class="secCurriculo container" id="secCurriculo"><h3>Curriculo</h3></section>
-        <section class="secContato container" id="secContato"><h3>Contato</h3></section>
+        <section class="secSobre container" id="secSobre">
+            <h3>Sobre</h3>
+            <div class="row sobreContent"></div>
+            <p>Meu nome é Willian Pereira da Silva, sou formado em Sistemas de Informação pela Universidade do
+                Estado de
+                Minas Gerais (UEMG) - Campus Passos e atualmente sou Servidor Público pela Prefeitura Municipal de
+                Capitólio, lotado na Secretaria de Saúde, trabalhando como Agente de Saúde.</p>
+            </div>
+        </section>
+        <section class="secCurriculo container" id="secCurriculo">
+            <h3>Curriculo</h3>
+            <div class="row curriculoContent">
+                <div class="col-12 col-md-6 curriculoTitle">
+                    <h4>Educação</h4>
+                    <div class="curriculoItem">
+                        <h5>Bacharel em Sistemas de Informação</h5>
+                        <h6>UEMG - Campus Passos</h6>
+                        <span><i class="bi bi-calendar-check"></i> Janeiro/2018 - Março/2022</span>
+                        <p>Graduação de curso superior em faculdade estadual, meu TC foi o desenvolvimento de um sistema
+                            web em PHP pare gerenciamento do trabalho do Agente Comunitário de Saúde. Nota máxima!</p>
+                    </div>
+                    <div class="curriculoItem">
+                        <h5>Ensino Médio</h5>
+                        <h6>EEMAO - Capitólio</h6>
+                        <span><i class="bi bi-calendar-check"></i> Jan/2014 - Dez/2016</span>
+                        <p>Ensino Médio em escola pública, cumprido todos os requisitos do calendário acadêmico.
+                            Integrado ao primeiro ano do ensino médico foi realizado um Curso de Empreendedorismo e
+                            Gestão.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 curriculoTitle">
+                    <h4>Profissional</h4>
+                    <div class="curriculoItem">
+                        <h5>Agente Comunitário de Saúde</h5>
+                        <h6>Prefeitura Municipal de Capitólio</h6>
+                        <span><i class="bi bi-calendar-check"></i> Jul/2020 - Atualmente</span>
+                        <p>Emprego Público no Setor de Saúde, fundamental para o funcionamento das Unidades Básicas de
+                            Saúde. Ajudei a implementar a informatização do trabalho, o qual era feito tudo em papel.
+                        </p>
+                    </div>
+                    <div class="curriculoItem">
+                        <h5>Estágio</h5>
+                        <h6>Prefeitura Municipal de Capitólio</h6>
+                        <span><i class="bi bi-calendar-check"></i> Nov/2018 - Jul/2020</span>
+                        <p>Emprego Público/Estágio no setor de Gestão de Frotas, era responsável por realizar, através
+                            de um sistema
+                            web, a cotação, compra e pagamento de mercadorias e prestação de serviço.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="secPortfolio container" id="secPortfolio">
+            <h3>Portfólio</h3>
+        </section>
+
+        <section class="secContato container" id="secContato">
+            <h3>Contato</h3>
+        </section>
     </main>
     <footer class="footer">williancapitolio</footer>
 </body>
