--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 </h2>
             </div>
             <div class="col-12">
-                <a href="#secSobre"><i class="bi bi-arrow-down"></i>Arraste para mais</a>
+                <a href="#secSobre" class="arrasteInicio"><i class="bi bi-arrow-down" href="#secSobre"></i>Arraste para mais</a>
             </div>
         </section>
         <section class="secSobre container" id="secSobre">
