--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,9 +92,18 @@ body {
     background-image: url("../img/portfolio-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     background-position: center;
     width: 100%;
     height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+@media (max-width: 768px) {
+    .secInicio {
+        background-attachment: scroll;
+    }
 }
 
 .secInicio div {
