--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,8 @@
                 </h2>
             </div>
             <div class="col-12">
-                <a href="#secSobre" class="arrasteInicio"><i class="bi bi-arrow-down" href="#secSobre"></i>Arraste para mais</a>
+                <a href="#secSobre" class="arrasteInicio"><i class="bi bi-arrow-down" href="#secSobre"></i>Arraste para
+                    mais</a>
             </div>
         </section>
         <section class="secSobre container" id="secSobre">
@@ -121,6 +122,134 @@
         </section>
         <section class="secPortfolio container" id="secPortfolio">
             <h3>Portfólio</h3>
+            <div class="row carouselInicio">
+                <div id="banner" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+                    <div id="indicadoresBanner" class="carousel-indicators">
+                        <button type="button" data-bs-target="#banner" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#banner" data-bs-slide-to="1"></button>
+                    </div>
+
+                    <div id="portfolioBanner" class="carousel-inner">
+
+                        <div class="carousel-item active">
+                            <div class="row row-cols-1 row-cols-md-3 g-4">
+                                <div class="col">
+                                    <div class="card" style="width: 18rem;">
+                                        <img src="../static/img/portfolio-1-prodacs.png" class="card-img-top"
+                                            alt="Print do ProdACS">
+                                        <div class="card-body">
+                                            <h5 class="card-title">ProdACS</h5>
+                                            <p class="card-text">Projeto fullstack desenvolvido para o meu TC, criado
+                                                com PHP e MySQL. Descontinuado.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="https://github.com/williancapitolio/prodacs" target='_blank'
+                                                    class="btn btn-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="#" target='_blank' class="btn btn-primary"><i
+                                                        class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card" style="width: 18rem;">
+                                        <img src="../static/img/portfolio-2-lords.png" class="card-img-top"
+                                            alt="Print da Lord's Personal Studio">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lord's Personal Studio</h5>
+                                            <p class="card-text">Projeto front-end landing page para a Academia
+                                                Lord's Personal Studio, criado com HTML, CSS e JS.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="https://github.com/williancapitolio/lordspersonalstudio"
+                                                    target='_blank' class="btn btn-dark me-3"><i
+                                                        class="bi bi-github"></i></a>
+                                                <a href="#" target='_blank' class="btn btn-primary"><i
+                                                        class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card" style="width: 18rem;">
+                                        <img src="../static/img/portfolio-3-giro.png" class="card-img-top"
+                                            alt="Print da Giro Capitólio">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Giro Capitólio</h5>
+                                            <p class="card-text">Projeto front-end landing page para a Agência de
+                                                Turismo Giro Capitólio, criado com HTML, CSS e JS.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="https://github.com/williancapitolio/girocapitolio"
+                                                    target='_blank' class="btn btn-dark me-3"><i
+                                                        class="bi bi-github"></i></a>
+                                                <a href="#" target='_blank' class="btn btn-primary"><i
+                                                        class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="row row-cols-1 row-cols-md-3 g-4">
+                                <div class="col">
+                                    <div class="card" style="width: 18rem;">
+                                        <img src="../static/img/portfolio-2-lords.png" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lord's Personal Studio</h5>
+                                            <p class="card-text">Some quick example text to build on the card title and
+                                                make
+                                                up
+                                                the bulk of the card's content.</p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card" style="width: 18rem;">
+                                        <img src="../static/img/portfolio-2-lords.png" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lord's Personal Studio</h5>
+                                            <p class="card-text">Some quick example text to build on the card title and
+                                                make
+                                                up
+                                                the bulk of the card's content.</p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card" style="width: 18rem;">
+                                        <img src="../static/img/portfolio-2-lords.png" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lord's Personal Studio</h5>
+                                            <p class="card-text">Some quick example text to build on the card title and
+                                                make
+                                                up
+                                                the bulk of the card's content.</p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="controlesBanner">
+                        <button type="button" class="carousel-control-prev" data-bs-target="#banner"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button type="button" class="carousel-control-next" data-bs-target="#banner"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+
         </section>
 
         <section class="secContato container" id="secContato">
