--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
             <p>Meu nome é Willian Pereira da Silva, sou formado em Sistemas de Informação pela Universidade do
                 Estado de
                 Minas Gerais (UEMG) - Campus Passos e atualmente sou Servidor Público pela Prefeitura Municipal de
-                Capitólio, lotado na Secretaria de Saúde, trabalhando como Agente de Saúde.</p>
+                Capitólio, lotado na Secretaria de Saúde, trabalhando como Agente Comunitário de Saúde.</p>
             </div>
         </section>
         <section class="secCurriculo container" id="secCurriculo">
@@ -87,7 +87,7 @@
                         <h6>UEMG - Campus Passos</h6>
                         <span><i class="bi bi-calendar-check"></i> Janeiro/2018 - Março/2022</span>
                         <p>Graduação de curso superior em faculdade estadual, meu TC foi o desenvolvimento de um sistema
-                            web em PHP pare gerenciamento do trabalho do Agente Comunitário de Saúde. Nota máxima!</p>
+                            web em PHP para o gerenciamento do trabalho do Agente Comunitário de Saúde. Nota máxima!</p>
                     </div>
                     <div class="curriculoItem">
                         <h5>Ensino Médio</h5>
@@ -141,7 +141,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">ProdACS</h5>
                                             <p class="card-text">Projeto fullstack desenvolvido para o meu TC, criado
-                                                com PHP e MySQL. Descontinuado.</p>
+                                                com PHP, Bootstrap, JS, DataTables, FullCalendar, Google Maps API e MySQL. Descontinuado.</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="https://github.com/williancapitolio/prodacs" target='_blank'
                                                     class="btn btn-dark me-3"><i class="bi bi-github"></i></a>
@@ -158,7 +158,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Lord's Personal Studio</h5>
                                             <p class="card-text">Projeto front-end landing page para a Academia
-                                                Lord's Personal Studio, criado com HTML, CSS e JS.</p>
+                                                Lord's Personal Studio, criado com HTML, CSS, Bootstrap e JS.</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="https://github.com/williancapitolio/lordspersonalstudio"
                                                     target='_blank' class="btn btn-dark me-3"><i
@@ -176,7 +176,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Giro Capitólio</h5>
                                             <p class="card-text">Projeto front-end landing page para a Agência de
-                                                Turismo Giro Capitólio, criado com HTML, CSS e JS.</p>
+                                                Turismo Giro Capitólio, criado com HTML, CSS, Bootstrap e JS.</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="https://github.com/williancapitolio/girocapitolio"
                                                     target='_blank' class="btn btn-dark me-3"><i
